; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_20056.c_dumpfile.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_20056.c_dumpfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwent = type { i8*, i8* }

@.str = private unnamed_addr constant [9 x i8] c"fd = %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"partial read! only read %d bytes\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"user %-17s  %-17s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dumpfile(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.pwent, align 8
  store i32 %0, i32* %3, align 4
  br label %7

7:                                                ; preds = %40, %1
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @read(i32 %8, %struct.pwent* %6, i32 51)
  store i32 %9, i32* %4, align 4
  %10 = icmp sgt i32 %9, 0
  br i1 %10, label %11, label %48

11:                                               ; preds = %7
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 51
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load i32, i32* %3, align 4
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i32 %17)
  %19 = call i32 @exit(i32 0) #3
  unreachable

20:                                               ; preds = %11
  store i32 0, i32* %5, align 4
  br label %21

21:                                               ; preds = %30, %20
  %22 = getelementptr inbounds %struct.pwent, %struct.pwent* %6, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  %24 = load i32, i32* %5, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %23, i64 %25
  %27 = load i8, i8* %26, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %40

30:                                               ; preds = %21
  %31 = getelementptr inbounds %struct.pwent, %struct.pwent* %6, i32 0, i32 0
  %32 = load i8*, i8** %31, align 8
  %33 = load i32, i32* %5, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i8, i8* %32, i64 %34
  %36 = load i8, i8* %35, align 1
  %37 = call i32 @ROT8L(i8 signext %36, i32 10)
  %38 = load i32, i32* %5, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %5, align 4
  br label %21

40:                                               ; preds = %21
  %41 = getelementptr inbounds %struct.pwent, %struct.pwent* %6, i32 0, i32 1
  %42 = load i8*, i8** %41, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 0
  %44 = getelementptr inbounds %struct.pwent, %struct.pwent* %6, i32 0, i32 0
  %45 = load i8*, i8** %44, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 0
  %47 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i8* %43, i8* %46)
  br label %7

48:                                               ; preds = %7
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @read(i32, %struct.pwent*, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @ROT8L(i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
